@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.37 2008/12/30 04:59:00 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.38 2008/12/30 05:33:33 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -31,6 +31,7 @@ Version change log: $Id: CHANGES.txt,v 1.37 2008/12/30 04:59:00 snikkel Exp $
 2.9102-509  fix: all: Fix OGR-NG middle mark limit miscalculation on odd rulers 
             imp: x86: Intel Atom (#4080)
             imp: x86: Pentium III detection (#4121)
+            add: all: support for requesting larger packets
 
 2.9102-508  new: x86: OGR-NG mmx core
             new: cellbe: OGR-NG SPU C core
